# hyperloop

./: .gitignore  .remote-sync.json  .travis.yml  CMakeLists.txt  COMMANDS.md  CONTRIBUTING  Jenkinsfile  LICENSE  Makefile  README.md  braking.c  cdefs.h  config.h  config.mk  distance.c  first  imu.c  interface.c  kalman.c  lateral.c  libBBB.c  libBBB.h  logging.c  main  main.c  photoelectric.c  pod.c  pod.h  remote_run.sh  run_core.sh  second  sync_and_build.sh  test  test.bats  test.sh  tests.c
II/: .gitignore  README.md
II/core/: CMakeLists.txt  accel.c  accel.h  cdefs.h  commander.h  config_overrides.h  config_photo.h  config_power.h  config_scores.h  core_checklists.h  log.c  log.h  logging.c  logging.h  main.c  panic.h  pod-defs.h  pod-helpers.h  pod.c  pru.c  ring_buffer.h  states.c  telemetry.h  tests.c
II/imu_test/: CMakeLists.txt
II/libhw/: adc.h  bbb.c  bbb.h  bus_internal.h  bus_manager.c  bus_manager.h  gpio.c  gpio.h  gpio_shim.c  i2c.c  pins.h  realtime.c  relay.c  relay.h  shims.c  solenoid.h
II/scripts/bbb_pru_headers/: README.md
II/tests/integration/: test_states.py
PRU ADC mux read/: encodeMux.py  readme.txt
PRU/PRU_ADC_C/: Readme.txt
PRU/PRU_ADC_C/BBB_fbc-1.00/: ReadMe.txt
PRU/PRU_ADC_C/FB_prussdrv-0.0/examples/: PRU_memAccessPRUDataRam.bas  user_leds.bas
PRU/PRU_ADC_C/Working_code/: Makefile
PRU/PRU_ADC_PYTHON/beaglebone_pru_adc-master/beaglebone_pru_adc-master/examples/: encoders.py
PRU/PRU_ADC_PYTHON/beaglebone_pru_adc-master/beaglebone_pru_adc-master/test/: test_start.py
PRU/PRU_MUX_1AIN/: ADCCollector.hp  PRU-GPIO-EXAMPLE-00A0.dts
PRU/PRU_MUX_7AIN/: ADCCollector.p  Makefile  README.txt  init
PRU_ADC_C/FB_prussdrv-0.0/examples/: PRUSSDRV.dts  PRU_memAccessPRUDataRam  user_leds  user_leds.p
PRU_ADC_C/FB_prussdrv-0.0/include/: pruss_intc_mapping.bi  prussdrv.bi
PRU_ADC_C/FB_prussdrv-0.0/utils/pasm_source/: pasm.c  pasm.h
PRU_ADC_C/Working_code/: bbb-io.c  pruio_c_wrapper.h
PRU_ADC_MUX/: ADCCollector.c  ADCCollector.p  Makefile  README.txt
PRU_MUX_7AIN/: ADCCollector.c  ADCCollector.hp  PRU-GPIO-EXAMPLE-00A0.dts
assets/: make_deb.sh
control/control.xcodeproj/: project.pbxproj
control/control.xcodeproj/project.xcworkspace/xcuserdata/ehurtig.xcuserdatad/: UserInterfaceState.xcuserstate
core/: CMakeLists.txt  Makefile  README.md  accel.c  accel.h  bbb.c  braking.c  bus_manager.c  bus_manager.h  cdefs.h  command.c  commander.c  commander.h  commands.c  commands.h  config.h  config_airsupply.h  config_inventory.h  config_overrides.h  config_photo.h  config_power.h  config_scores.h  core.c  core.h  core_checklists.c  core_checklists.h  debug.h  emergency.c  height.c  imu.c  imu_data.c  interface.c  lateral.c  libBBB.c  libBBB.h  libBBBShims.c  log.c  log.h  logging.c  logging.h  (+25 more)
core/config/: airsupply.h  inventory.h  overrides.h  photo.h  power.h  scores.h
core/pod/: emergency.c  emergency.h  log.c  log.h  states-internal.c  states.c  states.h
docs/: COMMANDS.md
imu_config/: CMakeLists.txt  Makefile  imu_config.c
imu_test/: Makefile  imu_test.c
libbbb/: Makefile  bbb.c  bbb.h  gpio.c  gpio.h  gpio_shim.c
libhw/: CMakeLists.txt  Makefile  README.md  adc.c  adc.h  bbb.h  bus_internal.h  bus_manager.c  bus_manager.h  gpio.c  hw.h  i2c.c  i2c.h  interface.h  libBBB.c  libBBB.h  mpye.c  mpye.h  pins.c  pins.h  realtime.c  realtime.h  relay.c  relay.h  shims.c  shims.h  solenoid.c  solenoid.h  ti_battery_packs.c  ti_battery_packs.h
libimu/: CMakeLists.txt  config.c  crc.c  crc.h  imu.c  imu.h  test.c
libint/: int.h  interface.c  interface.h  libBBB.c  libBBB.h  pins.c  pins.h  relay.c  relay.h  shims.c  shims.h  solenoid.c  solenoid.h
liblog/: log.h  logging.c  logging.h
libog/: log.c  log.h  logging.c  ring_buffer.c  ring_buffer.h
libsked/: Makefile  bus_internal.h  bus_manager.c  bus_manager.h
log-server/: controlpointserver.py  test
ods/: Makefile  requirements.txt  server.py  test
pod-client/: README.md
pod.xcodeproj/: project.pbxproj
pod.xcodeproj/project.xcworkspace/xcshareddata/: pod.xcscmblueprint
pod.xcodeproj/project.xcworkspace/xcuserdata/edhurtig.xcuserdatad/: UserInterfaceState.xcuserstate
pod.xcodeproj/xcuserdata/edhurtig.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
pod.xcodeproj/xcuserdata/edhurtig.xcuserdatad/xcschemes/: ALL.xcscheme  bbb.xcscheme  core.xcscheme  imu.xcscheme  int.xcscheme  log.xcscheme  xcschememanagement.plist
podctl/: podctl.py
pru/: ADCCollector.hp  ADCCollector.p  pru.c
scripts/: imu_sim.py  style.sh  test_adc_mux.py
scripts/bbb_pru_headers/: README.md  bbb-pru-headers_1.0_armhf.deb  build_package.sh
tests/check/: CMakeLists.txt  check_states.c
tests/integration/: controller_tests.py  hyperloop.py  test_flight_profiles.py  test_states.py
tools/: podctl.py
tparse/: main.c  main.h
(+1 files in other folders)
